Fix disappearing header by realigning the header of the website. This hopefully fixes #20.

--- a/themes/default/style.css
+++ b/themes/default/style.css
@@ -386,12 +386,11 @@ border-radius: 0 0 5px 5px;
 {
     color:#FFF;
     position: relative;
-    /*height: 80px;*/
-    padding: 20px;
-    max-width:1000px;
+    padding: 0;
+    max-width:1200px;
     min-width: 810px;
-    margin:0 auto;
-    margin-bottom:10px;
+    margin: 20px auto;
+    height: 82px;
 }
 .header .message
 {
@@ -408,12 +407,32 @@ border-radius: 0 0 5px 5px;
   color: #fff;
   font-weight:bold;
 }
-.introcie {background-color:#18B80A !important;}
 
-.login { position:absolute; bottom:20px; right:20px; text-align:right; width: 400px; vertical-align: bottom; }
-.login table {
-	margin:0; float: right;
+.header .cover-logo {
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	width: 250px;
+	height: 82px;
 }
+
+.login {
+	position: absolute;
+	bottom: 0;
+	right: 0;
+	text-align:right;
+	vertical-align: bottom;
+}
+
+.login table {
+	margin: 0;
+	border-spacing: 0;
+}
+
+.login table tr > td {
+	padding: 2px 0;
+}
+
 .login table a { display:block; float:right; color:#f5f5f5; font-weight:bold; font-size:10px; margin:5px 0px; }
 .login a {color:#000; text-decoration:none;}
 .login .button 
@@ -1010,8 +1029,8 @@ form textarea {
 }
 
 .cover-logo {
-	width: 200px;
-	height: 65.5px;
+	width: 250px;
+	height: 82px;
 }
 
 #sticker-map {
